--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ We believe that extremely talented and hard-working people equipped with the rig
 
 Includes members with current employer listed as AMUC, including part-time roles.<br><br>
 Headquarters:  Mumbai, Maharashtra<br><br>
-TypeSole:  Proprietorship<br><br>
+Type - Sole Proprietorship<br><br>
 Specialties  Contact Us - careers.amuc@gmail.com
 </h3>
 </p>
